<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Expense Manager</string>

    <string-array name="currency">
        <item>Rupees ₹</item>
        <item>Dollars $</item>
        <item>Euros €</item>
    </string-array>

    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="amount">Amount</string>
    <string name="source">Source</string>
    <string name="save">Save</string>
    <string name="how_much_money_do_you_have">How much money do you have?</string>
    <string name="get_started">Get Started</string>
    <string name="select_currency_unit">Select currency unit</string>
    <string name="your_money">Your Money</string>
    <string name="click_the_button_to_make_the_changes">Click the button to make the changes</string>
    <string name="net_profit">Net Profit:</string>
    <string name="net_loss">Net Loss:</string>
    <string name="profit_graph">Profit Graph</string>
    <string name="loss_graph">Loss Graph</string>
    <string name="source_text">Source Text</string>
    <string name="_16_october_2020_09_23_pm">16 October 2020, 09:23 PM</string>
    <string name="rs_100">Rs 100</string>
</resources>